# 2024-NSF-2348464-MWSCAS2024

./: CMakeLists.txt  README.md  test_phantom.cu
ckks/: ckks_benchmark.cu  ckks_operations.cu
compress/: compress.py  compress_image.py  compress_text.py  dcb_compression.cu  dct_compression.cu  decompress.py
pipeline/: compress_encrypt.cu  enc_dec.cu
python_scripts/: generate_test_data.py  verify.py  visualize_results.py
